--- a/server/package.json
+++ b/server/package.json
@@ -28,15 +28,20 @@
     "@types/express-session": "^1.17.0",
     "@types/graphql": "^14.5.0",
     "@types/ioredis": "^4.17.3",
+    "@types/jest": "^26.0.9",
     "@types/node": "^14.0.27",
     "@types/nodemailer": "^6.4.0",
     "@types/uuid": "^8.0.0",
+    "jest": "^26.2.2",
     "nodemon": "^2.0.4",
+    "ts-jest": "^26.1.4",
     "ts-node": "^8.10.2",
     "ts-node-dev": "^1.0.0-pre.56",
     "typescript": "^3.9.7"
   },
   "scripts": {
-    "start": "ts-node-dev --no-notify --respawn src/index.ts"
+    "start": "ts-node-dev --no-notify --respawn src/index.ts",
+    "db:setup": "ts-node ./src/test-utils/setup.ts",
+    "test": "npm run db:setup && jest --forceExit"
   }
 }
