--- a/server/package.json
+++ b/server/package.json
@@ -10,8 +10,10 @@
     "connect-redis": "^5.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-graphql": "^0.11.0",
     "express-session": "^1.17.1",
     "graphql": "^15.3.0",
+    "graphql-upload": "^11.0.0",
     "ioredis": "^4.17.3",
     "nodemailer": "^6.4.11",
     "pg": "^8.3.0",
